hopefully fixed issue on mobile text color of question

--- a/web-app/quiz/src/components/card/Card.css
+++ b/web-app/quiz/src/components/card/Card.css
@@ -10,6 +10,7 @@ button{
     width: 100%;
     height: 100%;
     border-radius: 13px;
+    color: black !important;
 }
 .answer-button{
     height: 5em;
@@ -17,6 +18,8 @@ button{
     margin: 0.1em;
     border-color: transparent;
     background-color: rgba(255, 255, 255, 0.2);
+    color: black !important;
+
 }
 .answer-button-clicked{
     height: 5em;
@@ -24,6 +27,8 @@ button{
     margin: 0.1em;
     border-color: transparent;
     background-color: rgba(255, 255, 255, 0.7);
+    color: black !important;
+
 }
 .answer-button-correct{
     height: 5em;
@@ -32,6 +37,8 @@ button{
     border-color: green;
     background-color: rgba(255, 255, 255, 0.2);
     border-width: 0.5em; 
+    color: black !important;
+
     
 }
 .answer-button-clicked-correct{
@@ -41,6 +48,8 @@ button{
     border-color: green;
     background-color: rgba(255, 255, 255, 0.7);
     border-width: 0.5em; 
+    color: black !important;
+
 
 }
 .answer-button-wrong{
@@ -50,6 +59,8 @@ button{
     border-color: red;
     background-color: rgba(255, 255, 255, 0.2);
     border-width: 0.5em; 
+    color: black !important;
+
 
 }
 .answer-button-clicked-wrong{
@@ -59,6 +70,8 @@ button{
     border-color: red;
     background-color: rgba(255, 255, 255, 0.7);
     border-width: 0.5em; 
+    color: black !important;
+
 
 }
 .question{
